--- a/public/assets/css/dokumen.css
+++ b/public/assets/css/dokumen.css
@@ -4,6 +4,10 @@
     background-color: #E0E0E0;
 }
 
+th {
+    border-bottom: none !important;
+}
+
 .divider {
     height: 2px;
     width: 100%;
@@ -39,6 +43,17 @@
     font-size: 24px;
     font-weight: 600;
     color: #424242;
+}
+
+.td-aksi {
+    width: 56px !important;
+}
+
+.divider-red {
+    background-color: #ef4444;
+    height: 4px;
+    width: 100%;
+    border-radius: 8px;
 }
 
 .divider-green {
